# libcfxp

./: CMakeLists.txt
src/: tests.c
src/cfxp/: fix64.c  fix64.h
